--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -22,6 +22,7 @@ plugins {
     id "com.android.application" version "8.7.0" apply false
     id "org.jetbrains.kotlin.android" version "1.9.23" apply false
     id "com.google.gms.google-services" version "4.3.15" apply false
+    id "com.google.firebase.crashlytics" version "2.8.1" apply false
 }
 
 include ":app"
